syntax = "proto3";

option java_package = "com.grigoryev.id";
option java_multiple_files = true;

message IdRequest {
  int64 id = 1;
}

message IdsRequest {
  int64 heroId = 1;
  int64 demonId = 2;
}
